# GeminiIRDPricer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG_IMPROVEMENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  README.md  app.py  code_quality.junie.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  noxfile.py  pyproject.toml  quick-start.bat  recommendations.gemini.md  recommendations.q.md  requirements-dev.txt  requirements.txt  sitecustomize.py  start-app.bat  start-dev.bat  start.bat  test-connection.bat
.github/workflows/: ci.yml
data/curves/: SwapRates_20250815.csv
docs/: CONFIG.md  CONFIG_SCHEMA.md  DEPENDENCY_LOCK.md  OPERATIONS.md  architecture.md  assumptions.md  examples.md  prod.readiness.plan.md  prod.readiness.tasks.md
docs/api/: openapi.json
docs/runbooks/: dev.md  prod.md
frontend/: package-lock.json  package.json
frontend/src/: App-simple.tsx  App.css  App.tsx  App.tsx.backup
frontend/src/components/: PaymentScheduleTable.tsx  SwapPricingForm.tsx  Tabs.tsx  YieldCurveChart.tsx  YieldCurveTable.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
hypothesis_backup/: __init__.py
scripts/: smoke_test.py
src/gemini_ird_pricer/: __init__.py  api_schemas.py  auth.py  cli.py  config.py  config_validator.py  domain.py  error_handler.py  health.py  logging_utils.py  parsing.py  performance.py  plotting.py  pricer.py  security.py  services.py  utils.py  web.py
templates/: index.html
tests/: conftest.py  test_api_endpoints.py  test_api_error_contract.py  test_api_validation.py  test_cli.py  test_cli_and_domain_src.py  test_cli_exit_codes.py  test_cli_extras.py  test_config_env.py  test_config_prod.py  test_daycount_p2.py  test_enhanced_validation.py  test_error_handler.py  test_golden.py  test_logging_redaction.py  test_m4_numerical_options.py  test_metrics_toggle.py  test_p2_properties.py  test_p3_src.py  test_parsing_and_web_src.py  test_parsing_limits.py  test_plotting_src.py  test_pricer_src.py  test_pydantic_config.py  test_security_enhancements.py  test_security_headers.py  test_services_cache_concurrency.py  test_services_cache_metrics.py  test_services_cache_policy.py  test_utils_find_curve_file.py  test_web_status_codes.py  test_year_fraction_numerics.py
tests/data/: SwapRates_20240115.csv
